syntax = "proto3";
package Shared;
//go-module-name указывается при инициализацию go.mod и так же в нём указывается
option go_package = "Bionic-Web-Control/proto/shared";
enum Finger{
    f1 = 0; //большой палец
    f2 = 1; //указательный палец
    f3 = 2; //средний палец
    f4 = 3; //безымянный палец
    f5 = 4; //мизинец
}

enum ServoPosition{
    d0 = 0; //приведения большого пальца
    d1 = 1; //большой палец
    d2 = 2; //указательный палец
    d3 = 3; //средний палец
    d4 = 4; //безымянный палец
    d5 = 5; //мизинец
}
// Перечисление возможных каналов для подключения к контроллеру за за ШИМ
enum ChanelPWM{
    ch1 = 0;
    ch2 = 1;
    ch3 = 2;
    ch4 = 3;
    ch5 = 4;
    ch6 = 5;
    ch7 = 6;
    ch8 = 7;
}